--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
            </ul>
 
                <ul class="icons-container">
-                 <li><a href="#"><img src="images/bag-icon.png" style="height: 20px; width: 20px;" alt=""></a></li>
-                 <li><a href="#"><img src="images/search.png" style="height: 20px; width: 20px;" alt=""></a></li>
-                 <li><a href="#"><img src="images/user.png" style="height: 20px; width: 20px;" alt=""></a></li>
+                 <li><a href="#"><img src="bag-icon.png" style="height: 20px; width: 20px;" alt=""></a></li>
+                 <li><a href="#"><img src="search.png" style="height: 20px; width: 20px;" alt=""></a></li>
+                 <li><a href="#"><img src="user.png" style="height: 20px; width: 20px;" alt=""></a></li>
                </ul>
         </nav>
      </header>
@@ -55,32 +55,32 @@
          <div class="arrows">
 
            <div>
-               <img src="images/previous.png" id="nxt" alt="">
+               <img src="previous.png" id="nxt" alt="">
            </div>
          </div>
 
          <div class="arrow">
-           <img src="images/next.png" id="pre" alt="">
+           <img src="next.png" id="pre" alt="">
         </div>
 
          <div class="image-container">
-            <img src="images/chair.png" style="height: 500px; width: 400px;">
+            <img src="chair.png" style="height: 500px; width: 400px;">
           </div>
        </div>
      </section>
 
       <div class="icons">
           <div class="i-1">
-          <img src="images/shipping.png" alt=""><p>free shipping<br>  <span style="color: grey; font-size: 10px;">Order over 99.99€</span></p>
+          <img src="shipping.png" alt=""><p>free shipping<br>  <span style="color: grey; font-size: 10px;">Order over 99.99€</span></p>
         </div>
         <div class="i-2">
-           <img src="images/shirt.png" alt=""><p>90 Days Return<br> <span style="color: grey; font-size: 10px;">For goods issues</span></p>
+           <img src="shirt.png" alt=""><p>90 Days Return<br> <span style="color: grey; font-size: 10px;">For goods issues</span></p>
         </div>
           <div class="i-3">
-              <img src="images/wallet.png" alt=""><p>Secure Payments<br> <span style="color: grey; font-size: 10px;">100% Secure & Safe</span></p>
+              <img src="wallet.png" alt=""><p>Secure Payments<br> <span style="color: grey; font-size: 10px;">100% Secure & Safe</span></p>
           </div>
           <div class="i-4">
-             <img src="images/girl.png" alt=""><p>24/7 Support<br> <span style="color: grey; font-size: 10px;">Deticated Support</span></p>
+             <img src="girl.png" alt=""><p>24/7 Support<br> <span style="color: grey; font-size: 10px;">Deticated Support</span></p>
           </div>
       </div>
 
@@ -93,29 +93,29 @@
 
          <div class="top">
            <div class="lights">
-                <img src="images/lights.png" height="150px;" width="200px;"  alt="">
+                <img src="lights.png" height="150px;" width="200px;"  alt="">
                 <p style="font-weight: bold;">Lights</p>
            </div>
            <div class="decoration">
                 <p style="font-weight: bold;">Decoration</p>
-                <img src="images/clock.png" height="150px;" width="200px;" alt="">
+                <img src="clock.png" height="150px;" width="200px;" alt="">
            </div>
            <div class="outdoor">
                <p style="font-weight: bold;">Outdoor Design</p>
-                <img src="images/outdoor.png" height="150px;" width="200px;" alt="">
+                <img src="outdoor.png" height="150px;" width="200px;" alt="">
            </div>
          </div>
          <div class="bottom">
            <div class="interior">
              <p style="font-weight: bold;">Interior Design</p>
-             <img src="images/interior.png" height="150px;" width="200px;" alt="">
+             <img src="interior.png" height="150px;" width="200px;" alt="">
            </div>
            <div class="furniture">
                  <p style="font-weight: bold;">Furniture</p>
-                 <img src="images/furniture.png" height="150px;" width="200px;" alt="">
+                 <img src="furniture.png" height="150px;" width="200px;" alt="">
            </div>
            <div class="space">
-                 <img src="images/space.png" height="150px;" width="200px;" alt="">
+                 <img src="space.png" height="150px;" width="200px;" alt="">
                  <p style="font-weight: bold;">Space Furniture</p>
            </div>
         </div>
@@ -137,19 +137,19 @@
          <div class="container-images">
           <div class="container">
             <div class="bag" >
-               <img src="images/bag.png" height="230px;" width="220px;" alt="">
+               <img src="bag.png" height="230px;" width="220px;" alt="">
             </div>
             <div class="lamp">
-               <img src="images/lamp.png" height="230px;" width="220px;" alt="">
+               <img src="lamp.png" height="230px;" width="220px;" alt="">
             </div>
             <div class="water">
-               <img src="images/water.png" height="230px;" width="220px;" alt="">
+               <img src="water.png" height="230px;" width="220px;" alt="">
             </div>
             <div class="chair">
-               <img src="images/chair7.png" height="230px;" width="220px;" alt="">
+               <img src="chair7.png" height="230px;" width="220px;" alt="">
             </div>
             <div class="globe">
-                <img src="images/globe.png" height="230px;" width="220px;" alt="">
+                <img src="globe.png" height="230px;" width="220px;" alt="">
             </div>
          </div>
       </div>
@@ -157,12 +157,12 @@
       <div class="left-right">
 
         <div>
-            <img src="images/left-arrow.png" id="lt" alt="">
+            <img src="left-arrow.png" id="lt" alt="">
         </div>
       </div>
 
       <div class="rights2">
-        <img src="images/right-arrow.png" id="rt" alt="">
+        <img src="right-arrow.png" id="rt" alt="">
      </div>
 
 
@@ -184,23 +184,23 @@
              <h1>Keep Updated & Get Unlimited <span style="border-bottom: 1px solid red;">Discount</span></h1>
            <div class="search">
              <p style="color: grey;">Sign up for our newsletter to receive updates and exclusive offers</p>
-               <span><img src="images/sent.png" class="fa-search" height="20px;" width="20px;"></span>
+               <span><img src="sent.png" class="fa-search" height="20px;" width="20px;"></span>
              <input type="email" name="email" placeholder="Enter your email address here">
           </div>
           </section>
 
         <div class="sponsors">
-            <img src="images/logo-1.png" height="100px;" width="100px;" alt="">
-            <img src="images/logo-1.png" height="100px;" width="100px;" alt="">
-            <img src="images/logo-1.png" height="100px;" width="100px;" alt="">
-            <img src="images/logo-1.png" height="100px;" width="100px;" alt="">
-            <img src="images/logo-1.png" height="100px;" width="100px;" alt="">
-            <img src="images/logo-1.png" height="100px;" width="100px;" alt="">
+            <img src="logo-1.png" height="100px;" width="100px;" alt="">
+            <img src="logo-1.png" height="100px;" width="100px;" alt="">
+            <img src="logo-1.png" height="100px;" width="100px;" alt="">
+            <img src="logo-1.png" height="100px;" width="100px;" alt="">
+            <img src="logo-1.png" height="100px;" width="100px;" alt="">
+            <img src="logo-1.png" height="100px;" width="100px;" alt="">
        </div>
            <section class="sec-4">
              <div class="sec-4-container">
               <div class="for-logo">
-                 <img src="images/logo_dukaken.png" style="height: 70px; width: 70px;" alt="">
+                 <img src="logo_dukaken.png" style="height: 70px; width: 70px;" alt="">
                  <p style=" color: grey; font-size: 10px;">You think water moves fast, You should see ice. Ites moves <br> like it has ande mind. Like it knows it killed if the world once <br> and got a taste for ater moves fast, You should see ice. Ites <br> moves like it has ande mind murdering.</p>
               </div>
               <div class="footer-links-1">
@@ -236,11 +236,11 @@
                 <p style="color: grey; font-size: 10px;">©️ 2018 <span style="color: red;">Dukaken</span>. All Rights Reserved</p>
               </div>
               <div class="sponsor">
-                <img src="images/cirrus.png" style="height: 20px; width: 20px;" alt="">
-                <img src="images/master.png" style="height: 20px; width: 20px;" alt="">
-                <img src="images/visa.png" style="height: 20px; width: 20px;" alt="">
-                <img src="images/skrill.png" style="height: 20px; width: 20px;" alt="">
-                <img src="images/pay.png" style="height: 20px; width: 20px;" alt="">
+                <img src="cirrus.png" style="height: 20px; width: 20px;" alt="">
+                <img src="master.png" style="height: 20px; width: 20px;" alt="">
+                <img src="visa.png" style="height: 20px; width: 20px;" alt="">
+                <img src="skrill.png" style="height: 20px; width: 20px;" alt="">
+                <img src="pay.png" style="height: 20px; width: 20px;" alt="">
               </div>
           </div>
        </main>
