--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
      <header>
         <nav class="nav-container">
            <div class="logo-container">
-              <a href="#"><img src="images/logo_dukaken.png" style="height: 70px; width: 70px;" alt=""></a>
+              <a href="#"><img src="logo_dukaken.png" style="height: 70px; width: 70px;" alt=""></a>
            </div>
            <ul class="link-container">
              <li><a href="#" style="color: red;">HOME</a></li>
